@@ -1,8 +1,22 @@
+/*
+ * Copyright 2024 Safe Health Systems, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package cdx.opencdx.adr.model;
 
 import cdx.opencdx.adr.repository.ANFRepo;
 import jakarta.persistence.*;
-
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -35,35 +49,40 @@ public class RequestCircumstanceModel {
     @JoinTable(
             name = "unionrequestCircumstanceconditionaltrigger",
             joinColumns = @JoinColumn(name = "request_circumstance_id"),
-            inverseJoinColumns = @JoinColumn(name = "associated_statement_id")
-    )
+            inverseJoinColumns = @JoinColumn(name = "associated_statement_id"))
     private List<AssociatedStatementModel> conditionalTriggers;
 
     @ManyToMany
     @JoinTable(
             name = "unionrequestCircumstanceparticipant",
             joinColumns = @JoinColumn(name = "request_circumstance_id"),
-            inverseJoinColumns = @JoinColumn(name = "participant_id")
-    )
+            inverseJoinColumns = @JoinColumn(name = "participant_id"))
     private List<ParticipantModel> requestedParticipants;
 
-    public RequestCircumstanceModel() {
-    }
+    public RequestCircumstanceModel() {}
 
     public RequestCircumstanceModel(cdx.opencdx.grpc.data.RequestCircumstance requestCircumstance, ANFRepo anfRepo) {
-        if(requestCircumstance.hasTiming()) {
-        this.timing = new MeasureModel(requestCircumstance.getTiming());
+        if (requestCircumstance.hasTiming()) {
+            this.timing = new MeasureModel(requestCircumstance.getTiming());
         }
         this.purpose = requestCircumstance.getPurposeList();
-        this.priority = CircumstancePriority.valueOf(requestCircumstance.getPriority().name());
-        if(requestCircumstance.hasRequestedResult()) {
-            this.requestedResult = anfRepo.getMeasureRepository().save(new MeasureModel(requestCircumstance.getRequestedResult()));
+        this.priority =
+                CircumstancePriority.valueOf(requestCircumstance.getPriority().name());
+        if (requestCircumstance.hasRequestedResult()) {
+            this.requestedResult =
+                    anfRepo.getMeasureRepository().save(new MeasureModel(requestCircumstance.getRequestedResult()));
         }
-        if(requestCircumstance.hasRepetition()) {
-            this.repetition = anfRepo.getRepetitionRepository().save(new RepetitionModel(requestCircumstance.getRepetition()));
+        if (requestCircumstance.hasRepetition()) {
+            this.repetition =
+                    anfRepo.getRepetitionRepository().save(new RepetitionModel(requestCircumstance.getRepetition()));
         }
-        this.conditionalTriggers = requestCircumstance.getConditionalTriggerList().stream().map(AssociatedStatementModel::new).collect(Collectors.toList());
-        this.requestedParticipants = requestCircumstance.getRequestedParticipantList().stream().map(ParticipantModel::new).map(participant -> anfRepo.getParticipantRepository().save(participant)).toList();
+        this.conditionalTriggers = requestCircumstance.getConditionalTriggerList().stream()
+                .map(AssociatedStatementModel::new)
+                .collect(Collectors.toList());
+        this.requestedParticipants = requestCircumstance.getRequestedParticipantList().stream()
+                .map(ParticipantModel::new)
+                .map(participant -> anfRepo.getParticipantRepository().save(participant))
+                .toList();
     }
 
     // Getters and Setters
